# Algorithmics

./: .gitignore  CMakeLists.txt  README.md  node.c  tree.c
avl_tree/: CMakeLists.txt  avl_tree.c  entry.c  log.c  tree.c
avl_tree/include/: binary_tree.h
binarytree/: CMakeLists.txt  Makefile  avl_tree.c  avl_tree.h  binary_tree.c  binary_tree.h  entry.c  entry.h  node.c  tree.c  tree.h  utility.c
binarytree/avl/: avl_tree.c
binarytree/include/: avl_tree.h  tree.h
binarytree/include/avl/: avl_tree.h
modular/: CMakeLists.txt  main.c  modular.c  modular.h
